@@ -52,6 +52,8 @@
     "Full path to ffmpeg for other streams support": "",
     "Additional output arguments for ffmpeg (default: '-acodec copy -vcodec copy')": "",
     "For more information regarding ffmpeg and its command line parameters please visit its homepage at": "",
+    "Enable proxy for ffmpeg": "",
+    "Proxy URL for ffmpeg": "",
     
     "Purge database records older than [days]": "",
     "Server bind address (restart needed)": "",
