@@ -52,6 +52,8 @@
     "Full path to ffmpeg for other streams support": "Kompletter Pfad für ffmpeg",
     "Additional output arguments for ffmpeg (default: '-acodec copy -vcodec copy')": "Zusätzliche Parameter für ffmpeg (Vorgabe: '-acodec copy -vcodec copy')",
     "For more information regarding ffmpeg and its command line parameters please visit its homepage at": "Für weitere Information über ffmpeg und seine Parameter besuchen Sie bitte seine Seite",
+    "Enable proxy for ffmpeg": "Verwendung von Proxy für ffmpeg einschalten",
+    "Proxy URL for ffmpeg": "Proxy URL für ffmpeg",
     
     "Purge database records older than [days]": "Datenbankeinträge löschen, wenn älter als [Tage]",
     "Server bind address (restart needed)": "Serveradresse (Neustart erforderlich)",
