@@ -1,3 +1,5 @@
+2015-09-02 1.1.3 Proxy support for ffmpeg added
+
 2015-08-11 1.1.2 Internal retries for HTTP connection added 
 
 2015-08-03 1.1.1 Postprocessing added (can be used to trigger media index)
